--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+<!-- icons -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <title>AKG.</title>
 </head>
 <body>
@@ -51,6 +53,72 @@
       </div>
     </div>
   </section>
-  
+  <main>
+    <section>
+      <div class="container">
+        <div class="text">
+          <h2>2022 Collection</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet at nunc elit in porttitor tortor nulla.</p>
+          <div class="collection_img">
+            <img src="images/Rectangle 7.png" alt="">
+          <img src="images/Rectangle 8.png" alt="">
+          </div>
+          <div class="texts">
+            <p>_For Men</p>
+          <p>_For Women</p>
+          <hr>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="new_sec">
+          <div class="text">
+            <h2>2022 New Arrivals</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet at nunc elit in porttitor tortor nulla.</p>
+          </div>
+          <div class="one">
+            <div class="image-container">
+              <p>001</p>
+              <img src="images/Rectangle 9.png" alt="">
+              <div class="text-price">
+                <p>Athletic Shoe</p> <br>
+                <p>$39.00 <span class="material-symbols-outlined">
+                  shopping_cart
+                  </span>
+                </p>
+              </div>
+            </div>
+          
+            <div class="image-container">
+              <p>002</p>
+              <img src="images/Rectangle 10.png" alt="">
+              <div class="text-price">
+                <p>Maroon Wedget</p> <br>
+                <p>$39.00 <span class="material-symbols-outlined">
+                  shopping_cart
+                  </span>
+                </p>
+              </div>
+            </div>
+          
+            <div class="image-container">
+              <p>003</p>
+              <img src="images/Rectangle 11.png" alt="">
+              <div class="text-price">
+                <p>Green Leather Shoe</p> <br>
+                <p>$39.00 <span class="material-symbols-outlined">
+                  shopping_cart
+                  </span>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
