--- a/index.html
+++ b/index.html
@@ -117,6 +117,30 @@
             </div>
           </div>
         </div>
+        <hr>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="box">
+          <div class="texts__box">
+            <p>1 June - 10 June 2022</p>
+            <p>Limited time offer</p>
+            <p>Get 20% off on every products</p>
+            <p>Spend minimal $100 get 30% off voucher code for your next purchase</p>
+            <button class="btn">Shop Now <img src="images/Group 3.png" alt=""></button>
+          </div>
+          <div class="img__box">
+            <img src="images/Group 7.png" alt="">
+        </div>
+
+        <div class="box_images">
+          <img class="img" src="images/image 5.png" alt="">
+          <img class="img" src="images/image 5 (1).png" alt="">
+          <img class="img" src="images/image 6 (1).png" alt="">
+          <img class="img" src="images/Group 11 (1).png" alt="">
+        </div>
       </div>
     </section>
   </main>
