completed desktop version

--- a/index.html
+++ b/index.html
@@ -143,6 +143,86 @@
         </div>
       </div>
     </section>
+
+    <section>
+      <div class="container">
+        <div class="logos">
+          <div class="logo-text">
+            <h3>Our Trending brands</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet at nunc elit in porttitor tortor nulla.</p>
+          </div>
+          <div class="logo">
+            <img src="images/Adidas.png" alt="">
+            <img src="images/New balance.png" alt="">
+            <img src="images/Puma.png" alt="">
+            <img src="images/Reebok.png" alt="">
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+       <div class="details-content">
+        <div class="details">
+          <h2>our purpose is simple: to live and deliver WOW</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum potenti sed lacus lectus. Tristique amet, ullamcorper quis feugiat at nulla. Erat elit turpis aliquam dictum ipsum lectus ornare est. Vitae, venenatis faucibus sagittis metus morbi. Massa pretium elit eget eget.</p> <br>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum potenti sed lacus lectus. Tristique amet, ullamcorper quis feugiat at nulla. Erat elit turpis aliquam dictum ipsum lectus ornare est. Vitae, venenatis faucibus sagittis metus morbi. Massa pretium elit eget eget.</p>
+          <button class="btn">Know More <img src="images/Group 3.png" alt=""></button>
+        </div>
+        <div class="details-img">
+          <img src="images/Rectangle 17.png" alt="">
+          <img src="images/Rectangle 19.png" alt="">
+        </div>
+       </div>
+       <div class="watch">
+        <img src="images/Vector 6.png" alt="">
+        <h2>Watch our video</h2>
+        <img src="images/Vector 6.png" alt="">
+        <h2>Watch our video</h2>
+        <img src="images/Vector 6.png" alt="">
+        <h2>Watch our video</h2>
+       </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="last-sec">
+          <h3>Visit our Instagrame</h3>
+          <p>@akg_insta</p>
+        </div>
+        <div class="last-sec-img">
+          <img src="images/Rectangle 20.png" alt="">
+          <img src="images/Rectangle 21.png" alt="">
+          <img src="images/Rectangle 22.png" alt="">
+          <img src="images/Rectangle 23.png" alt="">
+        </div>
+      </div>
+    </section>
   </main>
+
+   <div class="container">
+    <footer>
+      <div class="foo1">
+        <h2>AKG.</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. A enim ante ac porttitor eget diam turpis eget.</p>
+        <p>Terms & Condition | Privacy Policy</p>
+      </div>
+
+      <div class="foo2">
+        <p>Feel free to <br>visitng our Store</p>
+        <p style="font-size: 30px;">1396 St-Catherine Ouest,<br> Montreal, Quebec H3G 1P9</p>
+      </div> <hr>
+
+      <div class="foo3">
+        <p>Feel free to <br>visitng our Store</p>
+        <p style="font-size: 30px;">Local: 514.360.5778 |<br> Toll-free: 1.877.927.5899 (LUXY)</p>
+      </div> <hr>
+
+      <p style="text-align: center; color: #B4B4B4; padding: 1rem;">©AKG 2022. All Rights Reserved</p>
+      </footer>
+   </div>
 </body>
 </html>
