--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <li class="borderx">All Products</li>
         </ul>
         <h2>AKG.</h2>
+        <img id="menu" src="images/Text Block.svg" alt="">
         <ul>
           <li class="border">Search</li>
           <li class="border">Wishlist</li>
