--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
           <li class="border">New In</li>
           <li class="borderx">All Products</li>
         </ul>
-        <h2>AKG.</h2>
+        <div class="flex">
+          <h2>AKG.</h2>
         <img id="menu" src="images/Text Block.svg" alt="">
+        </div>
         <ul>
           <li class="border">Search</li>
           <li class="border">Wishlist</li>
